--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
 
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
+    testImplementation "io.mockk:mockk:1.9.kotlin12"
 
     // Kluent
     testImplementation "org.amshove.kluent:kluent-android:$kluent_version"
